--- a/themes/default/pages/home.htm
+++ b/themes/default/pages/home.htm
@@ -4,16 +4,173 @@ layout = "home"
 is_hidden = 0
 
 [staticExperience]
+
 ==
 
 <?php 
 
+	function onStart()
+	{
+		$this['lang']=\App::getLocale();
+		if($this['lang']==''){
+			$this['lang']='es';
+		}
+	    $this['experiences'] = $this->staticExperience->experienceList();
+	}
+
+	function onFindExperience(){
+
+		$days = $_POST['days'];
+		$interest = $_POST['interest'];
+		$tvisit = $_POST['tvisit'];
+    	
+    	$experiences = $this->staticExperience->experienceFind($days,$interest,$tvisit);
+
+       	return Redirect::to('/experiences')->with( ['data' => json_encode($experiences)] );
+    }
 
 ?>
 
 ==
 
-<h1>Home</h1>
-{% for experience in experiences %}
-    <li>{{ experience }}</li>
-{% endfor %}
+	<!-- HEADER -->
+    <div class="header header-home">
+      <div class="header-container">
+        <div class="header-txt">
+          <h1 class="txt txt-home"><span class="first-word">
+           {{'Playas'|_}}
+            </span>{{'que te llenan de luz'|_}}</h1>
+          <img class="brush" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/brush-header.svg" alt="">
+        </div>
+        <div class="search-bar-container">
+          <div class="search-bar">
+            <form data-request="onFindExperience">
+              <div class="inputs-container">
+                <div class="days-container">
+                  <select class="custom-select select-days" name="days">
+                    {% for i in 1..7 %}
+                      {% if i<2 %}
+                      	* <option value="{{ i }}">{{ i }} {{'día'|_}}</option>
+                      {% else %}
+						* <option value="{{ i }}">{{ i }} {{'días'|_}}</option>
+                      {% endif %}
+                    {% endfor %}
+                  </select>
+                  <span class="select-title">{{'TU ESTANCIA'|_}}</span>
+                </div>{% component 'cadizevent' %}
+                <div class="interests-container">
+                  <select class="custom-select select-interests" name="interest">
+                    <option value="playa-gastronomia">{{'Playa y gastronomía'|_}}</option>
+                    <option value="cultura-gastronomia">{{'Cultura y gastronomía'|_}}</option>
+                    <option value="fiesta-cultura">{{'Fiesta y cultura'|_}}</option>
+                    <option value="gastronomia-naturaleza">{{'Gastronomía y naturaleza'|_}}</option>
+                    <option value="naturaleza-aventura">{{'Naturaleza y aventura'|_}}</option>
+                    <option value="playa-naturaleza">{{'Playa y naturaleza'|_}}</option>
+                    <option value="vino-tradicion">{{'Vino y tradición'|_}}</option>
+                    <option value="aventura-tradicion">{{'Aventura y tradición'|_}}</option>
+                  </select>
+                  <span class="select-title">{{'INTERESES'|_}}</span>
+                </div>
+                <div class="type-container">
+                  <select class="custom-select select-type" name="tvisit">
+                    <option value="cadiz-oculta">{{'Cádiz oculta'|_}}</option>
+                    <option value="cadiz-autentica">{{'Cádiz auténtica'|_}}</option>
+                    <option value="cadiz-relax">{{'Cádiz relax'|_}}</option>
+                    <option value="cadiz-urbano">{{'Cádiz urbano'|_}}</option>
+                  </select>
+                  <span class="select-title">{{'TIPO DE VISITA'|_}}</span>
+                </div>
+              </div>
+              <div class="button-container">
+                <input type="submit" value="{{'Ven a Cádiz'|_}}">
+
+              
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="header-comment">
+          <p class="comment">{{'138km de playas, calas y ensenadas que invitan a perderse'|_}}</p>
+          <a class="header-link" href="{{lang}}/playas">{{'Conoce nuestras playas'|_}} &nbsp;<img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/link-arrow.svg" alt=""> </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- QUÉ SE CUECE -->
+    <div class="whats-on">
+
+      <div class="left-txt">
+        <p class="title">{{'Qué se cuece hoy en Cádiz'|_}}</p>
+          <img class="separator" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/big-yellow-separator.svg">
+
+          {% for iEvent in events %}
+            <div class="event">
+              <p class="event-date">{{iEvent['date_start_pretty']}}</p>
+              <p class="event-place">{{iEvent['place']}}</p>
+              <a href="jornadas-micologicas.html" class="event-name">{{iEvent['title']}}</a>
+            </div>
+          {% endfor %}
+
+            <a class="events-link" href="{{lang}}/eventos">{{'Todos los eventos'|_}}&nbsp;&nbsp;<img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/link-arrow-yellow.svg" alt=""> </a>
+      </div>
+
+
+      <div class="right-photos">
+        <!-- DIRECCIÓN 1º ARRIBA-ABAJO 2º IZQUIERDA-DERECHA -->
+
+        <a href="carreras-caballos.html">
+          <div id="element1" class="element">
+            <div class="overlay-img"></div>
+            <img class="rec-img" src="{{eventsVip[0]['image']}}">
+            <div class="txt-container">
+              <p class="date">{{eventsVip[0]['date_start_pretty']}}</p>
+              <p class="name">{{eventsVip[0]['title']}}</p>
+              <img class="separator" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/small-yellow-separator.svg">
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div id="element2" class="element">
+            <div class="overlay-img"></div>
+            <img class="rec-img" src="{{eventsVip[1]['image']}}">
+            <div class="txt-container">
+              <p class="date">{{eventsVip[1]['date_start_pretty']}}</p>
+              <p class="name">{{eventsVip[1]['title']}}</p>
+              <img class="separator" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/small-yellow-separator.svg">
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div id="element3" class="element">
+            <div class="overlay-img"></div>
+            <img class="rec-img" src="{{eventsVip[2]['image']}}">
+            <div class="txt-container">
+              <p class="date">{{eventsVip[2]['date_start_pretty']}}</p>
+              <p class="name">{{eventsVip[02]['title']}}</p>
+              <img class="separator" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/small-yellow-separator.svg">
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div id="element4" class="element">
+            <div class="overlay-img"></div>
+            <img class="rec-img" src="{{eventsVip[3]['image']}}">
+            <div class="txt-container">
+              <p class="date">{{eventsVip[3]['date_start_pretty']}}</p>
+              <p class="name">{{eventsVip[3]['title']}}</p>
+              <img class="separator" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/small-yellow-separator.svg">
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <!--  RUTAS -->
+    <div class="secret-routes">
+      <div class="txt-container">
+        <p class="title">{{'rutas secretas'|_}}</p>
+        <p class="desc">{{'¿Eres de emociones fuertes? Disfruta de Cádiz como nunca antes.'|_}}</p>
+        <a class="events-link" href="{{lang}}/rutas">{{'Selección de rutas secretas'|_}}<img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/link-arrow-yellow.svg" alt=""> </a>
+        <img class="separator" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/big-yellow-separator.svg">
+      </div>
+    </div>
