--- a/themes/default/content/static-pages/comarcas-barcelona.htm
+++ b/themes/default/content/static-pages/comarcas-barcelona.htm
@@ -1,8 +1,13 @@
 [viewBag]
-title = "jaen"
-url = "/comarcas/jaen"
+title = "barcelona"
+url = "/comarcas/barcelona"
 template = "pages"
 is_hidden = 0
+layout = "default"
+localeUrl[en] = "/comarcas/barcelona"
+localeUrl[fr] = "/comarcas/barcelona"
+localeUrl[de] = "/comarcas/barcelona"
+localeUrl[ru] = "/comarcas/barcelona"
 ==
 <!-- HEADER -->
 <div class="header header-comarca">
@@ -12,7 +17,7 @@ is_hidden = 0
 			<h1 class="txt"><span class="first-word">La Janda</span></h1><img class="brush fr-fil fr-dib" src="/cadizturismo/storage/app/media/uploaded-files/templates/brush-header.svg" alt=""></div>
 	</div>
 	<!-- NUEVA FOTO -->
-	<img class="background-image fr-fil fr-dib" src="/cadizturismo/storage/app/media/uploaded-files/capitan.jpg" alt="" data-result="success"></div>
+	<img class="background-image fr-fil fr-dib" src="/cadizturismo/storage/app/media/uploaded-files/templates/janda2.jpg" alt=""></div>
 <div class="section-txt-village">
 	<div class="txt-container">
 
