hidden url at list pages

--- a/themes/default/content/static-pages/municipios.htm
+++ b/themes/default/content/static-pages/municipios.htm
@@ -3,4 +3,9 @@ title = "Municipios"
 url = "/municipios"
 template = "pages"
 is_hidden = 0
+layout = "default"
+localeUrl[en] = "/municipios"
+localeUrl[fr] = "/municipios"
+localeUrl[de] = "/municipios"
+localeUrl[ru] = "/municipios"
 ==
