--- a/themes/default/content/static-pages/experiencias-america.htm
+++ b/themes/default/content/static-pages/experiencias-america.htm
@@ -1,39 +1,38 @@
 [viewBag]
-title = "la magia de el palmar"
-url = "/experiencias/la-magia-de-el-palmar"
-days = 5
-interest = "playa-naturaleza"
+title = "america"
+url = "/experiencias/america"
+days = 1
+interest = "playa-gastronomia"
 tvisit = "cadiz-oculta"
 template = "experiences"
-cover = "http://localhost:8888/cadizturismo/plugins/rainlab/pages/assets/img/palmar1.jpg"
-layout = "default"
+cover = "/cadizturismo/storage/app/media/uploaded-files/templates/palmar1.jpg"
+layout = "experience"
 is_hidden = 0
-navigation_hidden = 0
 ==
 <!-- HEADER -->
 <div class="header-event main-exp">
 	<div class="header-container">
 		<div class="header-txt">
 
-			<h1 class="txt">La magia de El Palmar</h1><img class="brush fr-fil fr-dib" src="http://localhost:8888/cadizturismo/plugins/rainlab/pages/assets/svg/brush-header.svg" alt=""></div>
+			<h1 class="txt">La magia de El Palmar</h1><img class="brush fr-fil fr-dib" src="/cadizturismo/storage/app/media/uploaded-files/templates/brush-header.svg" alt=""></div>
 	</div>
 	<!-- NUEVA FOTO -->
-	<img class="background-image fr-fil fr-dib" value="cover" src="http://localhost:8888/cadizturismo/plugins/rainlab/pages/assets/img/palmar1.jpg" alt="">
+	<img class="background-image fr-fil fr-dib" value="cover" src="/cadizturismo/storage/app/media/uploaded-files/templates/palmar1.jpg" alt="">
 	<!-- FEATURES -->
 	<div class="event-features">
-		<div class="feature-exp"><img src="http://localhost:8888/cadizturismo/plugins/rainlab/pages/assets/svg/calendar-exp.svg" class="fr-fil fr-dib">
+		<div class="feature-exp"><img src="/cadizturismo/storage/app/media/uploaded-files/templates/calendar-exp.svg" class="fr-fil fr-dib">
 
 			<p class="feature-txt">5 días</p>
 		</div>
-		<div class="feature-exp"><img src="http://localhost:8888/cadizturismo/plugins/rainlab/pages/assets/svg/beach-exp.svg" class="fr-fil fr-dib">
+		<div class="feature-exp"><img src="/cadizturismo/storage/app/media/uploaded-files/templates/beach-exp.svg" class="fr-fil fr-dib">
 
 			<p class="feature-txt">Playa</p>
 		</div>
-		<div class="feature-exp"><img src="http://localhost:8888/cadizturismo/plugins/rainlab/pages/assets/svg/natu-exp.svg" class="fr-fil fr-dib">
+		<div class="feature-exp"><img src="/cadizturismo/storage/app/media/uploaded-files/templates/natu-exp.svg" class="fr-fil fr-dib">
 
 			<p class="feature-txt">Naturaleza</p>
 		</div>
-		<div class="feature-exp"><img src="http://localhost:8888/cadizturismo/plugins/rainlab/pages/assets/svg/cultura-event.svg" class="fr-fil fr-dib">
+		<div class="feature-exp"><img src="/cadizturismo/storage/app/media/uploaded-files/templates/cultura-event.svg" class="fr-fil fr-dib">
 
 			<p class="feature-txt">Cádiz auténtica</p>
 		</div>
@@ -53,7 +52,7 @@ navigation_hidden = 0
 	</div>
 </div>
 <!-- SECTION IMG -->
-<div class="section-img"><img src="http://localhost:8888/cadizturismo/plugins/rainlab/pages/assets/img/palmar2.jpg" alt="" class="fr-fic fr-dii"></div>
+<div class="section-img"><img src="/cadizturismo/storage/app/media/uploaded-files/templates/palmar2.jpg" alt="" class="fr-fic fr-dii"></div>
 <div class="section-txt">
 	<div class="big-number-container"><span class="step">2</span></div>
 	<div class="txt-container">
@@ -65,7 +64,7 @@ navigation_hidden = 0
 		<p class="desc">De mayo a octubre se dan las condiciones más adecuadas: viento del Este y olas de mediana estatura que forman tubos y aseguran la diversión a los expertos de este deporte.</p>
 	</div>
 </div>
-<div class="section-img"><img src="http://localhost:8888/cadizturismo/plugins/rainlab/pages/assets/img/surf3.jpg" alt="" class="fr-fic fr-dii"></div>
+<div class="section-img"><img src="/cadizturismo/storage/app/media/uploaded-files/templates/surf3.jpg" alt="" class="fr-fic fr-dii"></div>
 <div class="section-txt">
 	<div class="big-number-container"><span class="step">3</span></div>
 	<div class="txt-container">
@@ -77,7 +76,7 @@ navigation_hidden = 0
 		<p class="desc">La gran afluencia turística de los últimos años no impide que la playa del Palmar haya dejado de presumir de su infinita tranquilidad. Hablamos de kilómetros de playa versátil, donde encontrarás un ambiente más alternativo y juvenil en la zona céntrica, o kilómetros a los extremos donde sumergirte en una fusión de pureza y paz en cualquier época del año.</p>
 	</div>
 </div>
-<div class="section-img"><img src="http://localhost:8888/cadizturismo/plugins/rainlab/pages/assets/img/palmar4.jpg" alt="" class="fr-fic fr-dii"></div>
+<div class="section-img"><img src="/cadizturismo/storage/app/media/uploaded-files/templates/palmar4.jpg" alt="" class="fr-fic fr-dii"></div>
 <div class="section-txt">
 	<div class="big-number-container"><span class="step">4</span></div>
 	<div class="txt-container">
@@ -94,13 +93,13 @@ navigation_hidden = 0
 
 		<p class="desc"><strong>Zahora:</strong> al otro extremo encontrarás esta pedanía casi anecdótica que pertenece al municipio de Barbate. Se encuentra en el Cabo de Trafalgar, donde se levanta su magestuoso Faro de Trafalgar y recoge playas como la del Sajorami o la playa de Mangueta. Un pequeño pueblo con encanto que se divide entre playas espectaculares con dunas en las que perderte y una pequeña urbanización que suele crecer en verano.</p>
 		<div class="municipios">
-			<div class="municipio"><img src="http://localhost:8888/cadizturismo/plugins/rainlab/pages/assets/svg/location-municipio.svg" class="fr-fil fr-dib">
+			<div class="municipio"><img src="/cadizturismo/storage/app/media/uploaded-files/templates/location-municipio.svg" class="fr-fil fr-dib">
 				<a href="https://www.google.es/maps/place/11140+Conil+de+la+Frontera,+C%C3%A1diz/data=!4m2!3m1!1s0xd0c381f6ac60cd1:0xf5342b7905a1d02e?sa=X&amp;ved=0ahUKEwitqPGmhpvYAhXEaRQKHcK8D9UQ8gEImAEwEA" target="_blank">&nbsp;<p class="municipio-txt">Conil</p>&nbsp;</a></div>
-			<div class="municipio"><img src="http://localhost:8888/cadizturismo/plugins/rainlab/pages/assets/svg/location-municipio.svg" class="fr-fil fr-dib">
+			<div class="municipio"><img src="/cadizturismo/storage/app/media/uploaded-files/templates/location-municipio.svg" class="fr-fil fr-dib">
 				<a href="https://www.google.es/search?q=las+calas+de+roche&amp;npsic=0&amp;rflfq=1&amp;rlha=1&amp;rlla=0&amp;rlhsc=CgoIyO6usN2yuJMy&amp;rllag=36307642,-6150099,109&amp;tbm=lcl&amp;ved=0ahUKEwj5y9q0hpvYAhVMWhQKHeu-BosQtgMIKg&amp;hotel_dates=2018-01-14,2018-01-15&amp;tbs=lf_hd:-1,lf_ho:2,lrf:!2m7!1e17!4m2!17m1!1e3!4m2!17m1!1e8!2m21!1e7!4m4!7m3!1m1!1u75!3sEUR!4m4!7m3!1m1!1u100!3sEUR!4m4!7m3!1m1!1u125!3sEUR!4m4!7m3!1m1!1u225!3sEUR!2m1!1e2!2m1!1e19!3sIAE,lf:1,lf_ui:6&amp;rldoc=1#rlfi=hd:2018-01-14,2018-01-15;si:;mv:!1m3!1d5107.757163888957!2d-6.14749635!3d36.30320979999999!2m3!1f0!2f0!3f0!3m2!1i198!2i305!4f13.1;tbs:lf_hd:-1,lf_ho:2,lrf:!2m21!1e7!4m4!7m3!1m1!1u75!3sEUR!4m4!7m3!1m1!1u100!3sEUR!4m4!7m3!1m1!1u125!3sEUR!4m4!7m3!1m1!1u225!3sEUR!2m1!1e2!2m1!1e19!2m7!1e17!4m2!17m1!1e3!4m2!17m1!1e8!3sIAE,lf:1,lf_ui:6" target="_blank">&nbsp;<p class="municipio-txt">Las Calas de Roche</p>&nbsp;</a></div>
-			<div class="municipio"><img src="http://localhost:8888/cadizturismo/plugins/rainlab/pages/assets/svg/location-municipio.svg" class="fr-fil fr-dib">
+			<div class="municipio"><img src="/cadizturismo/storage/app/media/uploaded-files/templates/location-municipio.svg" class="fr-fil fr-dib">
 				<a href="https://www.google.es/maps/place/11159+Zahora,+C%C3%A1diz/data=!4m2!3m1!1s0xd0c47338344472f:0xc21b61f8f66bf686?sa=X&amp;ved=0ahUKEwizkfOYhpvYAhXHchQKHVwLDvEQ8gEIjQEwDg" target="_blank">&nbsp;<p class="municipio-txt">Zahora</p>&nbsp;</a></div>
 		</div>
 	</div>
-	<div class="section-img"><img src="http://localhost:8888/cadizturismo/plugins/rainlab/pages/assets/img/palmar5.jpg" alt="" class="fr-fic fr-dii"></div>
+	<div class="section-img"><img src="/cadizturismo/storage/app/media/uploaded-files/templates/palmar5.jpg" alt="" class="fr-fic fr-dii"></div>
 </div>
