--- a/themes/default/content/static-pages/publicaciones.htm
+++ b/themes/default/content/static-pages/publicaciones.htm
@@ -31,6 +31,9 @@ localeUrl[ru] = "/publicaciones"
   <div class="publis">
     <div class="publicacion">
       <img class="publi-icon" src="/cadizturismo/plugins/rainlab/pages/assets/svg/video-icon.svg" alt="">
+      <h6 class="publi-title">MAGIC</h6>
+      <p class="publi-desc">"Magic" recorre la provincia con una familia, que se adentra en la naturaleza, en los pueblos, en el deporte…; unas amigas ávidas de acción, paisajes y turismo activo y una pareja, enamorada de la historia y la cultura.</p>
+
     </div>
     <div class="publicacion">
 
