--- a/themes/default/pages/404.htm
+++ b/themes/default/pages/404.htm
@@ -4,7 +4,7 @@ layout = "default"
 ==
 <div class="">
     <div class="container">
-        <h1>Page not found</h1>
-        <p>We're sorry, but the page you requested cannot be found.</p>
+        <h1>404</h1>
+        <p>{{'¿Estoy ciego?'|_}}</p>
     </div>
 </div>
