--- a/themes/default/content/static-pages/sobre-nosotros.htm
+++ b/themes/default/content/static-pages/sobre-nosotros.htm
@@ -38,8 +38,8 @@ localeUrl[ru] = "/sobre-nosotros"
     </div>
 	</div>
   <div class="tagline-container">
-    <p>Somos 260km de costa atlántica y arena fina, de playas vírgenes y urbanas.</p>
-    <p><b>Somos la Costa de la Luz. Somos esencia mediterránea. </b></p>
+    <p>Más de 260km de costa y arena fina, de playas vírgenes y urbanas.</p>
+    <p><b>Somos la Costa de la Luz. Somos esencia atlántica y mediterránea.</b></p>
   </div>
 </div>
 <div class="somos-section">
