--- a/themes/default/content/static-pages/sobre-nosotros.htm
+++ b/themes/default/content/static-pages/sobre-nosotros.htm
@@ -69,7 +69,7 @@ localeUrl[ru] = "/sobre-nosotros"
 	</div>
   <div class="tagline-container">
     <p>Tierra donde sumar <b>aventura, relax, fiesta y diversión.</b></p>
-    <p>Somos Cádiz</p>
+    <p>Somos Cádiz.</p>
   </div>
 </div>
 <div class="somos-txt-container">
