--- a/themes/default/content/static-pages/comarcas-bahia-de-cadiz.htm
+++ b/themes/default/content/static-pages/comarcas-bahia-de-cadiz.htm
@@ -33,6 +33,8 @@ localeUrl[ru] = "/comarcas/bahia-de-cadiz"
 		<p class="desc">La Janda es también perfecta para el turismo rural de interior, más tranquilo e idóneo para realizar múltiples y placenteras actividades de recreo y ocio al aire libre, tales como senderismo, cicloturismo, descenso de cañones, escalada, acampada libre o rutas a caballo.</p>
 
 		<p class="desc">Todo ello sin olvidar su ancestral cultura, su privilegiado entorno natural, su valioso patrimonio, la suculenta gastronomía y el colorido de sus fiestas.</p>
+
+		<p class="desc"><img src="/cadizturismo/storage/app/media/uploaded-files/arcos.jpg" style="width: 1181px; height: 763px;" class="fr-fic fr-dib" data-result="success"></p>
 	</div>
 </div>
 <!-- IMAGEN -->
@@ -90,6 +92,10 @@ localeUrl[ru] = "/comarcas/bahia-de-cadiz"
 </div>
 <div class="icons-row">
 	<div class="i-container">
+
+		<p>
+			<br>
+		</p>
 		<div class="also-feature"><img src="/cadizturismo/storage/app/media/uploaded-files/templates/natu-grey.svg" class="fr-fil fr-dib">
 
 			<p class="also-desc">Naturaleza</p>
@@ -100,7 +106,7 @@ localeUrl[ru] = "/comarcas/bahia-de-cadiz"
 		</div>
 		<div class="also-feature"><img src="/cadizturismo/storage/app/media/uploaded-files/templates/cultura-grey.svg" class="fr-fil fr-dib">
 
-			<p class="also-desc">Cultura</p>
+			<p class="also-desc">Cultura&nbsp;</p>
 		</div>
 	</div>
 </div>
