rutas & multilang template

--- a/plugins/rainlab/pages/controllers/index/_form_page.htm
+++ b/plugins/rainlab/pages/controllers/index/_form_page.htm
@@ -29,6 +29,9 @@
     <?php if ($objectType == 'evento'): ?>
         <input type="hidden" data-parent-url value="/eventos" />
     <?php endif ?>
+     <?php if ($objectType == 'ruta'): ?>
+        <input type="hidden" data-parent-url value="/rutas" />
+    <?php endif ?>
     
     
 
