--- a/themes/default/pages/allrutas.htm
+++ b/themes/default/pages/allrutas.htm
@@ -60,13 +60,13 @@ is_hidden = 0
       </div>
    
     <!-- SEARCH -->
-    <div id='prtlSearch'>
+    <div id='prtllSearch'>
       {% partial "site/searchruta" %}
     </div>
 
   </div>
 </div>
 
-<div id='prtlEvents' class="all-exps">
+<div id='prtllEvents' class="all-exps">
   {% partial "allrutas" %}
 </div>
