--- a/themes/default/pages/allrutas.htm
+++ b/themes/default/pages/allrutas.htm
@@ -42,7 +42,7 @@ is_hidden = 0
   	$aLang = App::getLocale();
     $rutas = $this->staticApp->rutaFind($category,$days,$location);
     
-    return Redirect::to($aLang.'/listado-de-rutas')->with( ['data' => json_encode($events)] );
+    return Redirect::to($aLang.'/listado-de-rutas')->with( ['data' => json_encode($rutas)] );
  
   }
 
@@ -68,6 +68,6 @@ is_hidden = 0
 </div>
 </div>
 
-<div id='prtlEvents' class="all-exps">
+<div id='prtlRutas' class="all-exps">
   {% partial "allrutas" %}
 </div>
