--- a/themes/default/pages/allrutas.htm
+++ b/themes/default/pages/allrutas.htm
@@ -55,7 +55,7 @@ is_hidden = 0
   <div class="header-container">
 
       <div class="header-txt">
-        <h1 class="txt-rutas"><span class="first-word-rutas">{{ "Rutas"|_ }}</span><span style="font-size: 121px; display: block;"> {{ "con encanto"|_ }} </span></h1>
+        <h1 class="txt-rutas"><span class="first-word-rutas">{{ "Rutas"|_ }}</span><span class="con-encanto" style="display: block;"> {{ "con encanto"|_ }} </span></h1>
         <img class="brush" src="{{preurl}}/storage/app/media/uploaded-files/templates/brush-header.svg" alt="">
       </div>
 
@@ -72,6 +72,6 @@ is_hidden = 0
 </div>
 </div>
 
-<div id='prtlRutas' class="all-exps">
+<div id='prtlRutas' class="main-section-comarcas">
   {% partial "allrutas" %}
 </div>
