--- a/themes/default/pages/sala-prensa-prensa.htm
+++ b/themes/default/pages/sala-prensa-prensa.htm
@@ -27,18 +27,18 @@ is_hidden = 0
 ?>
 
 ==
-<div class="ayuda-header" id="ayuda-header"><img class="img-header fr-fil fr-dib" src="/{{preurl}}/storage/app/media/uploaded-files/templates/prensa-header.jpg" alt="">
+<div class="ayuda-header" id="ayuda-header"><img class="img-header fr-fil fr-dib" src="{{preurl}}/storage/app/media/uploaded-files/templates/prensa-header.jpg" alt="">
 	<div class="header-container">
 		<div class="header-txt-comollegar">
 
 			<h1 class="txt">Prensa
-				<br>nacional</h1><img class="brush fr-fil fr-dib" src="/{{preurl}}/storage/app/media/uploaded-files/templates/brush-header.svg" alt="necesitas ayuda"></div>
+				<br>nacional</h1><img class="brush fr-fil fr-dib" src="{{preurl}}/storage/app/media/uploaded-files/templates/brush-header.svg" alt="necesitas ayuda"></div>
 	</div>
 </div>
 <section class="reportajes">
 	<div class="publi-container">
 
-		<h3 class="publicaciones-title">¿QUÉ DICEN DE NOSOTROS?</h3><img class="separator fr-fic fr-dii" src="/{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg"></div>
+		<h3 class="publicaciones-title">¿QUÉ DICEN DE NOSOTROS?</h3><img class="separator fr-fic fr-dii" src="{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg"></div>
 	
 </section>
 
