--- a/themes/default/pages/sala-prensa-prensa.htm
+++ b/themes/default/pages/sala-prensa-prensa.htm
@@ -23,7 +23,7 @@ is_hidden = 0
 	}
 
 
-	
+
 ?>
 
 ==
@@ -37,9 +37,8 @@ is_hidden = 0
 </div>
 <section class="reportajes">
 	<div class="publi-container">
-
-		<h3 class="publicaciones-title">¿QUÉ DICEN DE NOSOTROS?</h3><img class="separator fr-fic fr-dii" src="{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg"></div>
-	
+		<h3 class="publicaciones-title">¿QUÉ DICEN DE NOSOTROS?</h3>
+		<img class="separator fr-fic fr-dii" style="margin-bottom: 50px;" src="{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg"></div>
 </section>
 
  <!-- NEWS -->
