--- a/themes/default/pages/sala-prensa-prensa.htm
+++ b/themes/default/pages/sala-prensa-prensa.htm
@@ -42,6 +42,6 @@ is_hidden = 0
 </section>
 
  <!-- NEWS -->
-<div id='prtlSearch'>
+<div id='prtlSearch' class="search-prensa">
   {% partial "news" %}
 </div>
