--- a/themes/default/pages/home.htm
+++ b/themes/default/pages/home.htm
@@ -155,7 +155,7 @@ is_hidden = 0
       <div class="txt-container">
         <p class="title">{{ 'RUTAS SECRETAS'|_ }}</p>
         <p class="desc">{{ '¿Eres de emociones fuertes? Disfruta de Cádiz como nunca antes.'|_ }}</p>
-        <a class="events-link" href="/todas-las-rutas">{{ 'Selección de rutas secretas'|_ }}<img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-arrow-yellow.svg" alt=""> </a>
+        <a class="events-link" href="{{lang}}/todas-las-rutas">{{ 'Selección de rutas secretas'|_ }}<img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-arrow-yellow.svg" alt=""> </a>
         <img class="separator" src="{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg">
       </div>
     </div>
