--- a/themes/default/pages/sala-prensa-prensa.htm
+++ b/themes/default/pages/sala-prensa-prensa.htm
@@ -66,11 +66,11 @@ is_hidden = 0
 <div class="pagination">
 	{% for i in 1..numPag %}
 	<form data-request="onPaginate">
-		<span>Hola</span>
 			<input type="hidden" name = "ipag" value="{{i}}">
 			<input type="hidden" name = "inumberReg" value="{{numberReg}}">
 			<input type="hidden" name = "iidm" value="{{idm}}">
 			<button id="numPag{{i}}" class="btnNumPag" type="submit">{{i}}</button>
 	</form>
 {% endfor %}
+<span>jeje</span>
 </div>
