--- a/themes/default/pages/sala-prensa-prensa.htm
+++ b/themes/default/pages/sala-prensa-prensa.htm
@@ -63,6 +63,7 @@ is_hidden = 0
   {% partial "news" %}
 </div>
 
+{% if numPag > 0 %}
 <div class="pagination">
 	{% for i in 1..numPag %}
 	<form data-request="onPaginate">
@@ -73,3 +74,4 @@ is_hidden = 0
 	</form>
 {% endfor %}
 </div>
+{% endif %}
