--- a/themes/default/pages/sala-prensa-prensa.htm
+++ b/themes/default/pages/sala-prensa-prensa.htm
@@ -70,7 +70,11 @@ is_hidden = 0
 			<input type="hidden" name = "ipag" value="{{i}}">
 			<input type="hidden" name = "inumberReg" value="{{numberReg}}">
 			<input type="hidden" name = "iidm" value="{{idm}}">
+			{% if i == 1 %}
+			<button id="numPag{{i}}" class="btnNumPag active" type="submit">{{i}}</button>
+			{% else %}
 			<button id="numPag{{i}}" class="btnNumPag" type="submit">{{i}}</button>
+			{% endif %}
 	</form>
 {% endfor %}
 </div>
