--- a/themes/default/pages/sala-prensa-prensa.htm
+++ b/themes/default/pages/sala-prensa-prensa.htm
@@ -35,6 +35,7 @@ is_hidden = 0
         $idm = $_POST['iidm'];
 
         $this['startPag'] = $_POST['ipag'];
+        $this['idm'] = $_POST['iidm'];
         $this['numberReg'] = 1;
 
        	$this['numPag'] = ceil($this->staticApp->newListCount($this->param('idm'))/$this['numberReg']);
