--- a/plugins/rainlab/pages/controllers/index/_form_page.htm
+++ b/plugins/rainlab/pages/controllers/index/_form_page.htm
@@ -33,7 +33,9 @@
         <input type="hidden" data-parent-url value="/rutas" />
     <?php endif ?>
     
-    
+    {% filter parseSnippets %}
+    {% content 'company-details.htm' %}
+    {% endfilter %}
 
     <input type="hidden" value="0" name="objectForceSave" />
 
