--- a/themes/default/pages/home.htm
+++ b/themes/default/pages/home.htm
@@ -50,8 +50,8 @@ is_hidden = 0
       <div class="header-container">
         <div class="header-txt">
           <h1 class="txt txt-home"><span class="first-word">
-           {{ home.titulo|_ }}
-            </span>{{ home.subtitulo|_ }}</h1>
+           {{ home.titulo }}
+            </span>{{ home.subtitulo }}</h1>
           <img class="brush" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/brush-header.svg" alt="">
         </div>
 
@@ -61,8 +61,8 @@ is_hidden = 0
         </div>
 
         <div class="header-comment">
-          <p class="comment">{{ home.parrafo|_ }}</p>
-          <a class="header-link" href="{{url('/')}}/{{lang}}/home.enlace">{{ home.enlace_titulo|_ }} &nbsp;<img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-arrow.svg" alt=""> </a>
+          <p class="comment">{{ home.parrafo }}</p>
+          <a class="header-link" href="{{url('/')}}/{{lang}}/home.enlace">{{ home.enlace_titulo }} &nbsp;<img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-arrow.svg" alt=""> </a>
         </div>
       </div>
     </div>
