--- a/modules/backend/controllers/empresa/update.htm
+++ b/modules/backend/controllers/empresa/update.htm
@@ -1,6 +1,11 @@
 <?php if (!$this->fatalError): ?>
 
     <?php Block::put('form-contents') ?>
+        
+        <div>
+            <?= $this->makePartial('menu') ?>
+        </div>
+
         <div class="layout">
 
             <div class="layout-row">
@@ -29,7 +34,7 @@
                         <?= e(trans('backend::lang.form.save_and_close')) ?>
                     </button>
                     <span class="btn-text">
-                        <?= e(trans('backend::lang.form.or')) ?> <a href="<?= Backend::url('backend/empresa') ?>"><?= e(trans('backend::lang.form.cancel')) ?></a>
+                        <?= e(trans('backend::lang.form.or')) ?> <a href="<?= Backend::url('backend/empresa') ?>">Volver</a>
                     </span>
                     <button
                         type="button"
