--- a/modules/backend/controllers/tipo/create.htm
+++ b/modules/backend/controllers/tipo/create.htm
@@ -8,6 +8,10 @@
 <?php if (!$this->fatalError): ?>
 
     <?php Block::put('form-contents') ?>
+        <div>
+            <?= $this->makePartial('menu') ?>
+        </div>
+        
         <div class="layout">
 
             <div class="layout-row">
@@ -35,7 +39,7 @@
                         <?= e(trans('backend::lang.form.create_and_close')) ?>
                     </button>
                     <span class="btn-text">
-                        <?= e(trans('backend::lang.form.or')) ?> <a href="<?= Backend::url('backend/tipo') ?>"><?= e(trans('backend::lang.form.cancel')) ?></a>
+                        <?= e(trans('backend::lang.form.or')) ?> <a href="<?= Backend::url('backend/tipo') ?>">Volver</a>
                     </span>
                 </div>
             </div>
