--- a/modules/backend/controllers/tipo/update.htm
+++ b/modules/backend/controllers/tipo/update.htm
@@ -40,7 +40,7 @@
                         class="oc-icon-trash-o btn-icon danger pull-right"
                         data-request="onDelete"
                         data-load-indicator="<?= e(trans('backend::lang.form.deleting')) ?>"
-                        data-request-confirm="<?= e(trans('backend::lang.user.delete_confirm')) ?>">
+                        data-request-confirm="¿Eliminar este tipo de empresa?">
                     </button>
                 </div>
             </div>
