--- a/themes/default/pages/listempresas.htm
+++ b/themes/default/pages/listempresas.htm
@@ -49,7 +49,7 @@ is_hidden = 0
 ==
 
 <!-- HEADER -->
-<div class="header-search search-exp">
+<div class="header-search search-exp bussinesPage">
   
   <div class="header-container big-div">
     <div id="exp-header" class="header-txt">
@@ -57,7 +57,7 @@ is_hidden = 0
         <img class="brush" src="{{preurl}}/storage/app/media/uploaded-files/templates/brush-header.svg" alt="">
     </div>
     
-    <p class="txt text-center"><span>{{'¿Qué necesitas de cadiz?'|_}}</span></p>
+    <p class="txt text-center whatDoYouNeedCadiz"><span>{{'¿Qué necesitas de cadiz?'|_}}</span></p>
     
     <!-- SEARCH -->
     <div id='prtlSearch'>
@@ -67,6 +67,6 @@ is_hidden = 0
   </div>
 </div>
 
-<div id='prtlEmpresasl' class="all-exps">
+<div id='prtlEmpresasl' class="all-exps bussinesPage">
   {% partial "empresas" %}
 </div>
