--- a/themes/default/pages/listempresassector.htm
+++ b/themes/default/pages/listempresassector.htm
@@ -51,7 +51,7 @@ is_hidden = 0
 ==
 
 <!-- HEADER -->
-<div class="header-search search-exp bussinesPage">
+<div class="header-search search-exp bussinesPage" style="background-image: url({{type.image}})">
   
   <div class="header-container big-div">
     <div id="exp-header" class="header-txt">
@@ -59,9 +59,7 @@ is_hidden = 0
 
         <img class="brush" src="{{preurl}}/storage/app/media/uploaded-files/templates/brush-header.svg" alt="">
     </div>
-    
-    <p class="txt text-center whatDoYouNeedCadiz"><span>{{type.image}}</span></p>
-    
+
   </div>
 </div>
 
