--- a/themes/default/pages/showempresas.htm
+++ b/themes/default/pages/showempresas.htm
@@ -44,7 +44,7 @@ $this['metaImg'] = $this['empresa']->image;
     <div class="header-container big-div">
         <div id="exp-header" class="header-txt">
             <p class="txt"><span id="exp" class="first-word">{{empresa.name}}</span></p>
-            <img class="brush" src="{{empresa.image}}" alt="">
+            <img class="brush" src="{{preurl}}/storage/app/media/uploaded-files/templates/brush-header.svg" alt="">
         </div>
     </div>
 
