--- a/modules/backend/controllers/tipo/_menu.htm
+++ b/modules/backend/controllers/tipo/_menu.htm
@@ -1,11 +1,9 @@
 <div data-control="toolbar">
     <a href="<?= Backend::url('backend/empresa') ?>" >
-        <img src="{{'assets/images/bussiness.svg'}}" alt="">
         Empresas
     </a>
 
      <a href="<?= Backend::url('backend/tipo') ?>" >
-         <img src="{{'assets/images/bussiness.svg'}}" alt="">
-         Tipo de empresass
+        Tipo de empresas
     </a>
 </div>
