--- a/modules/backend/controllers/empresa/_menu.htm
+++ b/modules/backend/controllers/empresa/_menu.htm
@@ -1,11 +1,11 @@
 <div data-control="toolbar">
     <a href="<?= Backend::url('backend/empresa') ?>">
-        <img src="{{'assets/images/bussiness.svg'}}" alt="">
-        Empresass
+        <img src="../../assets/images/bussiness.svg" alt="">
+        Empresas
     </a>
 
      <a href="<?= Backend::url('backend/tipo') ?>">
-         <img src="{{'assets/images/menu.svg'}}" alt="">
-         Tipo de empresassss
+         <img src="../../assets/images/menu.svg" alt="">
+         Tipo de empresas
     </a>
 </div>
