--- a/modules/backend/controllers/empresa/_menu.htm
+++ b/modules/backend/controllers/empresa/_menu.htm
@@ -1,80 +1,11 @@
-<div class="layout-cell layout-sidenav-container">
-    <div class="layout-relative">
-        <nav id="layout-sidenav" class="layout-sidenav bg-p scroll-after" data-active-class="active" data-control="sidenav">
-            <ul class="nav">
-                <li class="active" data-menu-item="pages">
-                    <a href="javascript:;">
-                                    <span class="nav-icon">
-                                                                                    <img class="svg-icon" src="http://cadizturismo.jekyllme.com/plugins/rainlab/pages/assets/images/pages-icon.svg">
+<div data-control="toolbar">
+    <a href="<?= Backend::url('backend/empresa') ?>">
+        <img src="/modules/backend/assets/images/bussiness.svg" alt="">
+        Empresas
+    </a>
 
-                                        <i class="svg-replace "></i>
-                                    </span>
-                        <span class="nav-label">
-                                        Páginas
-                                    </span>
-                    </a>
-                    <span class="counter empty" data-menu-id="pages/pages">
-                                                                    </span>
-                </li>
-                <li class="" data-menu-item="menus">
-                    <a href="javascript:;">
-                                    <span class="nav-icon">
-                                                                                    <img class="svg-icon" src="http://cadizturismo.jekyllme.com/plugins/rainlab/pages/assets/images/menus-icon.svg">
-
-                                        <i class="svg-replace "></i>
-                                    </span>
-                        <span class="nav-label">
-                                        Menú
-                                    </span>
-                    </a>
-                    <span class="counter empty" data-menu-id="pages/menus">
-                                                                    </span>
-                </li>
-                <li class="" data-menu-item="experiences">
-                    <a href="javascript:;">
-                                    <span class="nav-icon">
-                                                                                    <img class="svg-icon" src="http://cadizturismo.jekyllme.com/plugins/rainlab/pages/assets/svg/experiencias.svg">
-
-                                        <i class="svg-replace "></i>
-                                    </span>
-                        <span class="nav-label">
-                                        Experiencias
-                                    </span>
-                    </a>
-                    <span class="counter empty" data-menu-id="pages/experiences">
-                                                                    </span>
-                </li>
-                <li class="" data-menu-item="eventos">
-                    <a href="javascript:;">
-                                    <span class="nav-icon">
-                                                                                    <img class="svg-icon" src="http://cadizturismo.jekyllme.com/plugins/rainlab/pages/assets/svg/contenido-eventos.svg">
-
-                                        <i class="svg-replace "></i>
-                                    </span>
-                        <span class="nav-label">
-                                        Eventos
-                                    </span>
-                    </a>
-                    <span class="counter empty" data-menu-id="pages/eventos">
-                                                                    </span>
-                </li>
-                <li class="" data-menu-item="rutas">
-                    <a href="javascript:;">
-                                    <span class="nav-icon">
-                                                                                    <img class="svg-icon" src="http://cadizturismo.jekyllme.com/plugins/rainlab/pages/assets/svg/contenido-rutas.svg">
-
-                                        <i class="svg-replace "></i>
-                                    </span>
-                        <span class="nav-label">
-                                        Rutas
-                                    </span>
-                    </a>
-                    <span class="counter empty" data-menu-id="pages/rutas">
-                                                                    </span>
-                </li>
-            </ul>
-            <span class="before scroll-marker"></span><span class="after scroll-marker"></span></nav>
-    </div>
-
+     <a href="<?= Backend::url('backend/tipo') ?>">
+         <img src="/modules/backend/assets/images/menu.svg" alt="">
+         Tipo de empresas
+    </a>
 </div>
-
