--- a/modules/backend/controllers/empresa/index.htm
+++ b/modules/backend/controllers/empresa/index.htm
@@ -1,5 +1,6 @@
-<div>
+<div class="floatJuan">
     <?= $this->makePartial('menu') ?>
 </div>
-
-<?= $this->listRender() ?>
+<div class="floatJuan">
+    <?= $this->listRender() ?>
+</div>
