--- a/modules/backend/controllers/empresa/index.htm
+++ b/modules/backend/controllers/empresa/index.htm
@@ -3,14 +3,21 @@
         display: inline-block;
     }
     .floatJuan.left{
-        width: 30%;
+        width: 20%;
         background: #175DA3;
     }
+    .floatJuan.left [data-control="toolbar"]{
+        white-space: normal;
+    }
     .floatJuan.left a{
-        display: inline-block;
+        display: block;
+    }
+    .floatJuan.left a img{
+        display: block;
+        margin: auto;
     }
     .floatJuan.right{
-        width: 70%;
+        width: 80%;
     }
 </style>
 <div class="floatJuan left">
