--- a/modules/backend/controllers/empresa/index.htm
+++ b/modules/backend/controllers/empresa/index.htm
@@ -1,9 +1,12 @@
 <style>
     .floatJuan{
         display: inline-block;
+        vertical-align: top;
     }
     .floatJuan.left{
+        display: table-cell;
         width: 20%;
+        max-width: 100px;
         background: #175DA3;
     }
     .floatJuan.left [data-control="toolbar"]{
@@ -11,6 +14,11 @@
     }
     .floatJuan.left a{
         display: block;
+        text-align: center;
+        font-family: AvenirNext-Medium;
+        font-size: 11px;
+        color: #FFFFFF;
+        letter-spacing: 0;
     }
     .floatJuan.left a img{
         display: block;
