--- a/modules/backend/controllers/empresa/index.htm
+++ b/modules/backend/controllers/empresa/index.htm
@@ -1,10 +1,9 @@
 <style>
     .floatJuan{
-        display: inline-block;
+        display: table-cell;
         vertical-align: top;
     }
     .floatJuan.left{
-        display: table-cell;
         width: 20%;
         max-width: 100px;
         background: #175DA3;
@@ -19,6 +18,8 @@
         font-size: 11px;
         color: #FFFFFF;
         letter-spacing: 0;
+        margin-top: 15px;
+        margin-bottom: 45px;
     }
     .floatJuan.left a img{
         display: block;
