--- a/modules/backend/controllers/empresa/_menu.htm
+++ b/modules/backend/controllers/empresa/_menu.htm
@@ -1,10 +1,10 @@
 <div data-control="toolbar">
-    <a href="<?= Backend::url('backend/empresa') ?>">
+    <a href="<?= Backend::url('backend/empresa') ?>" >
         <img src="/modules/backend/assets/images/bussiness.svg" alt="">
         Empresas
     </a>
 
-     <a href="<?= Backend::url('backend/tipo') ?>">
+     <a href="<?= Backend::url('backend/tipo') ?>" style="opacity: 0.5">
          <img src="/modules/backend/assets/images/menu.svg" alt="">
          Tipo de empresas
     </a>
