--- a/modules/backend/controllers/empresa/index.htm
+++ b/modules/backend/controllers/empresa/index.htm
@@ -4,7 +4,7 @@
         vertical-align: top;
     }
     .floatJuan.left{
-        width: 20%;
+        width: 100px;
         max-width: 100px;
         background: #175DA3;
     }
@@ -18,12 +18,12 @@
         font-size: 11px;
         color: #FFFFFF;
         letter-spacing: 0;
-        margin-top: 15px;
         margin-bottom: 45px;
     }
     .floatJuan.left a img{
         display: block;
         margin: auto;
+        margin-bottom: 15px;
     }
     .floatJuan.right{
         width: 80%;
