--- a/modules/backend/controllers/tipo/_menu.htm
+++ b/modules/backend/controllers/tipo/_menu.htm
@@ -1,9 +1,11 @@
 <div data-control="toolbar">
-    <a href="<?= Backend::url('backend/empresa') ?>" >
+    <a href="<?= Backend::url('backend/empresa') ?>" style="opacity: 0.5">
+        <img src="/modules/backend/assets/images/bussiness.svg" alt="">
         Empresas
     </a>
 
-     <a href="<?= Backend::url('backend/tipo') ?>" >
+    <a href="<?= Backend::url('backend/tipo') ?>" >
+        <img src="/modules/backend/assets/images/menu.svg" alt="">
         Tipo de empresas
     </a>
 </div>
