--- a/modules/backend/controllers/empresa/index.htm
+++ b/modules/backend/controllers/empresa/index.htm
@@ -18,11 +18,11 @@
         font-size: 11px;
         color: #FFFFFF;
         letter-spacing: 0;
-        margin-bottom: 45px;
     }
     .floatJuan.left a img{
         display: block;
         margin: auto;
+        margin-top: 45px;
         margin-bottom: 15px;
     }
     .floatJuan.right{
