--- a/modules/backend/controllers/empresa/index.htm
+++ b/modules/backend/controllers/empresa/index.htm
@@ -1,4 +1,7 @@
 <style>
+    .layout-cell{
+        padding-top: 0!important;
+    }
     .floatJuan{
         display: table-cell;
         vertical-align: top;
