--- a/modules/backend/controllers/empresa/index.htm
+++ b/modules/backend/controllers/empresa/index.htm
@@ -31,6 +31,9 @@
     .floatJuan.right{
         width: 80%;
     }
+    .toolbar-widget.list-header{
+        margin-top: 23px!important;
+    }
 </style>
 <div class="floatJuan left">
     <?= $this->makePartial('menu') ?>
