--- a/modules/backend/controllers/tipo/index.htm
+++ b/modules/backend/controllers/tipo/index.htm
@@ -1,4 +1,7 @@
 <style>
+	.layout-cell{
+		padding-top: 0!important;
+	}
 	.floatJuan{
 		display: table-cell;
 		vertical-align: top;
@@ -27,6 +30,9 @@
 	}
 	.floatJuan.right{
 		width: 80%;
+	}
+	.toolbar-widget.list-header{
+		margin-top: 23px!important;
 	}
 </style>
 <div class="floatJuan left">
