--- a/modules/backend/controllers/tipo/index.htm
+++ b/modules/backend/controllers/tipo/index.htm
@@ -34,6 +34,16 @@
 	.toolbar-widget.list-header{
 		margin-top: 23px!important;
 	}
+	.btn.btn-primary.oc-icon-plus{
+		background: #175DA3;
+		border-radius: 4px;
+		font-family: AvenirNext-Medium;
+		font-size: 14px;
+		color: #FFFFFF;
+		letter-spacing: 0;
+		border: 1px solid #FFFFFF;
+		padding: 16px 20px;
+	}
 </style>
 <div class="floatJuan left">
 	<?= $this->makePartial('menu') ?>
