--- a/modules/backend/controllers/empresa/update.htm
+++ b/modules/backend/controllers/empresa/update.htm
@@ -2,69 +2,71 @@
 
     <?php Block::put('form-contents') ?>
         
-        <div>
+        <div class="floatJuan left">
             <?= $this->makePartial('menu') ?>
         </div>
+        <div class="floatJuan right">
+            <div class="layout">
 
-        <div class="layout">
-
-            <div class="layout-row">
-                <?= $this->formRenderOutsideFields() ?>
-                <?= $this->formRenderPrimaryTabs() ?>
-            </div>
-
-            <div class="form-buttons">
-                <div class="loading-indicator-container">
-                    <button
-                        type="submit"
-                        data-request="onSave"
-                        data-request-data="redirect:0"
-                        data-hotkey="ctrl+s, cmd+s"
-                        data-load-indicator="<?= e(trans('backend::lang.form.saving')) ?>"
-                        class="btn btn-primary">
-                        <?= e(trans('backend::lang.form.save')) ?>
-                    </button>
-                    <button
-                        type="button"
-                        data-request="onSave"
-                        data-request-data="close:1"
-                        data-hotkey="ctrl+enter, cmd+enter"
-                        data-load-indicator="<?= e(trans('backend::lang.form.saving')) ?>"
-                        class="btn btn-default">
-                        <?= e(trans('backend::lang.form.save_and_close')) ?>
-                    </button>
-                    <span class="btn-text">
-                        <?= e(trans('backend::lang.form.or')) ?> <a href="<?= Backend::url('backend/empresa') ?>">Volver</a>
-                    </span>
-                    <button
-                        type="button"
-                        class="oc-icon-trash-o btn-icon danger pull-right"
-                        data-request="onDelete"
-                        data-load-indicator="<?= e(trans('backend::lang.form.deleting')) ?>"
-                        data-request-confirm="¿Eliminar esta empresa?">
-                    </button>
+                <div class="layout-row">
+                    <?= $this->formRenderOutsideFields() ?>
+                    <?= $this->formRenderPrimaryTabs() ?>
                 </div>
+
+                <div class="form-buttons">
+                    <div class="loading-indicator-container">
+                        <button
+                            type="submit"
+                            data-request="onSave"
+                            data-request-data="redirect:0"
+                            data-hotkey="ctrl+s, cmd+s"
+                            data-load-indicator="<?= e(trans('backend::lang.form.saving')) ?>"
+                            class="btn btn-primary">
+                            <?= e(trans('backend::lang.form.save')) ?>
+                        </button>
+                        <button
+                            type="button"
+                            data-request="onSave"
+                            data-request-data="close:1"
+                            data-hotkey="ctrl+enter, cmd+enter"
+                            data-load-indicator="<?= e(trans('backend::lang.form.saving')) ?>"
+                            class="btn btn-default">
+                            <?= e(trans('backend::lang.form.save_and_close')) ?>
+                        </button>
+                        <span class="btn-text">
+                            <?= e(trans('backend::lang.form.or')) ?> <a href="<?= Backend::url('backend/empresa') ?>">Volver</a>
+                        </span>
+                        <button
+                            type="button"
+                            class="oc-icon-trash-o btn-icon danger pull-right"
+                            data-request="onDelete"
+                            data-load-indicator="<?= e(trans('backend::lang.form.deleting')) ?>"
+                            data-request-confirm="¿Eliminar esta empresa?">
+                        </button>
+                    </div>
+                </div>
+
             </div>
+        <?php Block::endPut() ?>
+
+        <?php Block::put('form-sidebar') ?>
+            <div class="hide-tabs"><?= $this->formRenderSecondaryTabs() ?></div>
+        <?php Block::endPut() ?>
+
+        <?php Block::put('body') ?>
+            <?= Form::open(['class'=>'layout stretch']) ?>
+                <?= $this->makeLayout('form-with-sidebar') ?>
+            <?= Form::close() ?>
+        <?php Block::endPut() ?>
+
+    <?php else: ?>
+        <div class="control-breadcrumb">
+            <?= Block::placeholder('breadcrumb') ?>
+        </div>
+        <div class="padded-container">
+            <p class="flash-message static error"><?= e(trans($this->fatalError)) ?></p>
+            <p><a href="<?= Backend::url('backend/empresa') ?>" class="btn btn-default"><?= e(trans('backend::lang.user.return')) ?></a></p>
+        </div>
+    <?php endif ?>
 
         </div>
-    <?php Block::endPut() ?>
-
-    <?php Block::put('form-sidebar') ?>
-        <div class="hide-tabs"><?= $this->formRenderSecondaryTabs() ?></div>
-    <?php Block::endPut() ?>
-
-    <?php Block::put('body') ?>
-        <?= Form::open(['class'=>'layout stretch']) ?>
-            <?= $this->makeLayout('form-with-sidebar') ?>
-        <?= Form::close() ?>
-    <?php Block::endPut() ?>
-
-<?php else: ?>
-    <div class="control-breadcrumb">
-        <?= Block::placeholder('breadcrumb') ?>
-    </div>
-    <div class="padded-container">
-        <p class="flash-message static error"><?= e(trans($this->fatalError)) ?></p>
-        <p><a href="<?= Backend::url('backend/empresa') ?>" class="btn btn-default"><?= e(trans('backend::lang.user.return')) ?></a></p>
-    </div>
-<?php endif ?>
