--- a/modules/backend/controllers/tipo/_menu.htm
+++ b/modules/backend/controllers/tipo/_menu.htm
@@ -34,6 +34,9 @@
     .toolbar-widget.list-header{
         margin-top: 23px!important;
     }
+    .padded-container.layout{
+        padding: 0!important;
+    }
 </style>
 <div data-control="toolbar">
     <a href="<?= Backend::url('backend/empresa') ?>" style="opacity: 0.5">
